force-app/main/default/objects/Zumzum__Sales_Invoice__c/Zumzum__Sales_Invoice__c.object-meta.xml
<CustomObject>
    <label>Sales Invoice</label>
    <nameField>
        <label>SI Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Invoices</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>