force-app/main/default/objects/Zumzum__Sales_Invoice__c/fields/Course_Other_Charges__c.field-meta.xml
<CustomField>
    <fullName>Course_Other_Charges__c</fullName>
    <label>Course Other Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>