force-app/main/default/objects/Zumzum__Sales_Invoice__c/fields/Course_Place_Total__c.field-meta.xml
<CustomField>
    <fullName>Course_Place_Total__c</fullName>
    <label>Course Place Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>