force-app/main/default/objects/Zumzum__Sales_Invoice__c/fields/CoursePlaceTotal__c.field-meta.xml
<CustomField>
    <fullName>CoursePlaceTotal__c</fullName>
    <label>Course Place Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>