force-app/main/default/objects/Zumzum__Sales_Invoice__c/fields/Email_signature__c.field-meta.xml
<CustomField>
    <fullName>Email_Signature__c</fullName>
    <formula>&#39;Kind Regards,&#39;+ BR() +
BR() +
BR() +
Booking__r.Course__r.Enquiries_PSA_Name__c + BR() +
BR() +
&#39;Course Organiser&#39; + BR() +
BR() +
&#39;Telephone: &#39; + Booking__r.Course__r.Enquiries_PSA_Phone__c + BR() +
BR() +
&#39;Email: Any reply to this email should be sent to &#39; + Booking__r.Course__r.Enquiries_PSA_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Signature</label>
    <type>Text</type>
</CustomField>