force-app/main/default/objects/Zumzum__Sales_Invoice__c/fields/Unpaid_SI_SC_Amount__c.field-meta.xml
<CustomField>
    <fullName>Unpaid_SI_SC_Amount__c</fullName>
    <formula>IF(ISPICKVAL(Zumzum__Type__c,&quot;Sales Invoice&quot;),  Zumzum__Total_Unpaid_Amount__c, -1 * Zumzum__Total_Unpaid_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unpaid SI/SC Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>