force-app/main/default/objects/Zumzum__Sales_Invoice__c/validationRules/ContactShouldHaveExactValueIfHasBooking.validationRule-meta.xml
<ValidationRule>
    <fullName>ContactShouldHaveExactValueIfHasBooking</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNULL( Booking__c )) &amp;&amp; 
Zumzum__Contact__c &lt;&gt; Booking__r.Primary_Contact__c</errorConditionFormula>
    <errorDisplayField>Zumzum__Contact__c</errorDisplayField>
    <errorMessage>This field should have the same value as Booking Primary Contact</errorMessage>
</ValidationRule>